# simple-qld-ftlt

./: .gitignore  README.md  buyingfunc.py  calcfunc.py  config.py  generate.py  main.py  pyproject.toml  sorting_util.py  stockdata.py  test.py
